# termauth-rs

./: Cargo.toml  README.md  database.db  old.txt  users.txt
src/: component.rs  components.rs  main.rs  ui.rs
src/auth/: login.rs  signup.rs
src/backend/: service.rs
src/backend/service/: credential.rs  credential_manager.rs  security.rs  user.rs  utility.rs
src/backend/service/security/: authenticator.rs  database.rs  rate_limiter.rs  regex.txt
src/backend/service/utility/: constants.rs  response.rs
src/component/: block.rs  item.rs  state.rs
src/components/: centered_rectangle.rs
src/ui/: app.rs  menu.rs  popup.rs  signup.rs  tabs.rs
src/ui/tabs/: credential_manager.rs  login.rs  notepad.rs  profile.rs  signup.rs  utility.rs  welcome.rs
src/ui/tabs/utility/: helper.rs  popup.rs
