[package]
name = "termauth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
chrono = "0.4.24"
crossterm = "0.26.1"
rand = "0.8.5"
regex = "1.7.3"
rusqlite = "0.29.0"
tui = "0.19.0"
